# fxp_videoclipper

./: Append  Cargo.toml  README.org
clipper/: Cargo.toml
clipper/src/: clip.rs  clipper.rs  lib.rs  output.rs
clutter/: Cargo.toml
clutter/src/: clut.rs  clutter.rs  lib.rs  output.rs
exporter/: Cargo.toml
exporter/src/: export.rs  exporter.rs  lib.rs  output.rs
filenames/: Cargo.toml
filenames/src/: filename_handling.rs  filename_parts.rs  lib.rs
fxp_clipper/: Cargo.toml
fxp_clipper/src/: clip.rs  clipper.rs  lib.rs
fxp_clutter/: Cargo.toml
fxp_clutter/src/: clutter.rs
fxp_exporter/: Cargo.toml
fxp_exporter/src/: export.rs  exporter.rs  lib.rs
fxp_filenames/: Cargo.toml
fxp_filenames/src/: filename_handling.rs  filename_parts.rs
fxp_gmicer/: Cargo.toml
fxp_gmicer/src/: gmicer.rs  image.rs  lib.rs
fxp_init/: Cargo.toml
fxp_init/src/: config.rs  duration.rs  lib.rs  literals.rs  mp3.rs
fxp_merger/: Cargo.toml
fxp_merger/src/: merger.rs
fxp_modes/: Cargo.toml
fxp_modes/src/: lib.rs  modes.rs
fxp_output/: Cargo.toml
fxp_output/src/: output.rs
fxp_sampler/: Cargo.toml
fxp_sampler/src/: lib.rs  sample.rs  sampler.rs
gmicer/: Cargo.toml
gmicer/src/: gmicer.rs  image.rs  lib.rs  output.rs
init/: Cargo.toml
init/src/: audio_dir.rs  audio_file.rs  config.rs  duration.rs  fps.rs  lib.rs  literals.rs  log_config.rs  media_duration.rs  mp3.rs  multiple_opacities.rs  opacity.rs  pixel.rs  sampling.rs
merger/: Cargo.toml
merger/src/: lib.rs  merge.rs  merger.rs  output.rs
modes/: Cargo.toml
modes/src/: modes.rs
output/: Cargo.toml
output/src/: lib.rs  output.rs
sampler/: Cargo.toml
sampler/src/: lib.rs  output.rs  sample.rs  sampler.rs
src/: main.rs
