[package]
name = "fxp_videoclipper"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = "4.5.23"
log = "0.4"
ctrlc = "3.4.5"
anyhow = "1.0.95"
clap-verbosity-flag = "3.0.2"
console = "0.15.10"

init = { version = "0.4.0", path = "init" }
modes = { version = "0.1.0", path = "modes"}

exporter = { version = "0.4.0", path = "exporter" }
sampler = { version = "0.4.0", path = "sampler" }
merger = { version = "0.4.0", path = "merger"}
clutter = { version = "0.4.0", path = "clutter" }
gmicer = { version = "0.4.0", path = "gmicer"}
clipper = { version = "0.4.0", path = "clipper"}

filenames = { version = "0.4.0", path = "filenames"}
output = { version = "0.4.0", path = "output"}

[workspace]
members = ["init", "exporter", "clutter", "filenames", "merger", "sampler", "gmicer", "clipper", "modes", "output",]
