[package]
name = "clipper"
version = "0.4.0"
edition = "2021"

[dependencies]
indicatif = "0.17.9"
log = "0.4"
ctrlc = "3.4.5"
anyhow = "1.0.95"
rand = "0.8.0"

regex = "1.11.1"
thiserror = "2.0.11"

filenames = { path = "../filenames"}
modes = { path = "../modes"}
output = { path = "../output"}
tempfile = "3.19.1"

[lib]
name = "clipper"
path = "src/lib.rs"
