[package]
name = "fxp_clipper"
version = "0.4.0"
edition = "2021"
description = "Clipper mode for fxp_videoclipper"
license = "MIT OR Apache-2.0"

[dependencies]
indicatif = "0.17.9"
log = "0.4"
ctrlc = "3.4.5"
anyhow = "1.0.95"
rand = "0.8.0"

regex = "1.11.1"
thiserror = "2.0.11"

fxp_filenames = { version = "0.4.0", path = "../fxp_filenames"}
fxp_modes = { version = "0.4.0", path = "../fxp_modes"}
fxp_output = { version = "0.4.0", path = "../fxp_output"}
tempfile = "3.19.1"

[lib]
name = "fxp_clipper"
path = "src/lib.rs"
