[package]
name = "fxp_clutter"
version = "0.4.0"
edition = "2021"
description = "Clutter mode for fxp_videoclipper"
license = "MIT OR Apache-2.0"

[dependencies]
image = "0.25.5"
indicatif = "0.17.9"
log = "0.4"
anyhow = "1.0.95"
rand = "0.8.0"
ctrlc = "3.2"

fxp_filenames = { version = "0.4.0", path = "../fxp_filenames"}
fxp_modes = { version = "0.4.0", path = "../fxp_modes"}
fxp_output = { version = "0.4.0", path = "../fxp_output"}

[lib]
name = "fxp_clutter"
path = "src/lib.rs"
