[package]
name = "fxp_gmicer"
version = "0.4.0"
edition = "2021"

[dependencies]
indicatif = "0.17.9"
log = "0.4"
ctrlc = "3.4.5"
anyhow = "1.0.95"
regex = "1.11.1"
rand = "0.8.0"
thiserror = "2.0.11"

fxp_filenames = {version = "0.4.0", path = "../fxp_filenames"}
fxp_modes = { version = "0.4.0", path = "../fxp_modes"}
fxp_output = { version = "0.4.0", path = "../fxp_output"}
console = "0.15.11"

[lib]
name = "fxp_gmicer"
path = "src/lib.rs"
