[package]
name = "fxp_sampler"
version = "0.4.0"
edition = "2021"

[dependencies]
indicatif = "0.17.9"
log = "0.4"
ctrlc = "3.4.5"
anyhow = "1.0.95"
rand = "0.8.0"

fxp_modes = { version = "0.4.0", path = "../fxp_modes"}
fxp_output = { version = "0.4.0", path = "../fxp_output"}

[lib]
name = "fxp_sampler"
path = "src/lib.rs"
