[package]
name = "gmicer"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.9"
log = "0.4"
ctrlc = "3.4.5"
anyhow = "1.0.95"
regex = "1.11.1"
rand = "0.8.0"
thiserror = "2.0.11"

filenames = { path = "../filenames"}
modes = { path = "../modes"}
output = { path = "../output"}
console = "0.15.11"

[lib]
name = "gmicer"
path = "src/lib.rs"
